Help mobile sidebar menu stand out more, fix overlap between footer and wayfinders at the end of a node

--- a/web/themes/custom/citizen_dart/components/02-chunks/navigation/section-menu/_section-menu.scss
+++ b/web/themes/custom/citizen_dart/components/02-chunks/navigation/section-menu/_section-menu.scss
@@ -52,6 +52,7 @@
       //override potential interference from desktop position
       top: auto !important;
       z-index: 20;
+      border-top: 1px solid rgba($white,0.4);
     }
     @include menuStop{
       position: absolute;
